# python-clean-arch

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: app-todo-ci.yml  auth-ci.yml  ci.yml
auth-api/: .env.sample  .gitignore  README.md  pyproject.toml
auth-api/src/: config.py  main.py
auth-api/src/features/auth/: router.py  service.py
auth-api/src/features/users/: models.py  repository.py  router.py  schemas.py  service.py
auth-api/src/shared/: database.py  logger.py  security.py
src/: main.py
src/core/domain/: todo.py
src/core/interfaces/: todo_repository.py
src/core/use_cases/: todo_service.py
src/infra/db/: models.py  repository.py  setup.py
src/infra/web/: router.py  schemas.py
src/tests/: conftest.py  test_main.py
todo-app-api/: .dockerignore  .env.sample  .gitignore  Makefile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
todo-app-api/src/: config.py  main.py
todo-app-api/src/core/domain/: todo.py
todo-app-api/src/infra/db/: repository.py  setup.py
